[package]
name = "hello_world"
version = "0.1.0"
authors = ["wenhuijia <wenhuijia@tencent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.23"
rand = { git = "https://github.com/rust-lang-nursery/rand.git", rev = "9f35b8e"  }
